# Projet_TechNova_Partners

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  coverage.xml  init_db.sh  mkdocs.yml  nginx.conf  pyproject.toml  requirements.txt  start.sh  supervisord.conf
.github/workflows/: cd.yml  ci.yml
app/: api.py  database.py  main.py  models.py  security.py
artifacts/: threshold.json
dashboard/: build_features.py  dshbd.py  feature_schema.py
docs/: app.api.html  app.models.html  domain.domain.html  schema.puml  service.technova_service.html
docs/api_reference/: app_api.md  app_models.md  domain.md  technova_service.md
docs/init_base/: database.md
docs/securite/: security.md
domain/: domain.py
my-postgres/: docker-compose.yml
notebooks/: projet_technova_partners.ipynb
scripts/: build_ml_features.py  create_db.py  generate_docs.py  init_project_technova.py  query_examples.sql  seed_from_csv.py  seed_ml_features.py
service/: technova_service.py
tests/: conftest.py  test_api.py  test_database.py  test_main.py  test_security.py  test_technova_service.py
